--- a/ProyectoUno/proyecto/css/css.css
+++ b/ProyectoUno/proyecto/css/css.css
@@ -1,12 +1,18 @@
-div{
-	text-align: center;
-	width: 50%;
-	margin-top: 250px;
-	margin-left: 35%;
+form{
+	margin-top: 200px;
+  margin-left: 40%;
+   font-size: 24px;
 }
-fieldset{
-	width: 50%;	
+#campo{
+	 font-size: 24px;
+	 width: 225px;
 }
-input{
-	width: 45%;
+#boton {
+	background: #F25C84;
+  border-color: #FF5C84;
+  height: 30px;
+  line-height: 28px;
+  padding: 0 12px 2px;
+  vertical-align: baseline;
 }
+
